<resources>
    <string name="app_name">PadiCare</string>
    <string name="signup">Daftar</string>
    <string name="signin">Masuk</string>
    <string name="no_account">Belum Mempunyai Akun ?</string>
    <string name="have_account">Sudah Mempunyai Akun ?</string>
    <string name="register_here">Daftar Disini\n</string>
    <string name="login_here">Masuk Disini</string>
    <string name="home" translatable="false">Home</string>
    <string name="berita" translatable="false">News</string>
    <string name="history" translatable="false">History</string>
    <string name="scan" translatable="false">Scan</string>
    <string name="profile" translatable="false">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="change_language">Ubah Bahasa</string>
    <string name="logout">KELUAR</string>
    <string name="newsTitle">Judul Berita</string>
    <string name="linkNews">Baca Selengkapnya</string>
    <string name="contact">Hubungi Kami</string>
    <string name="deskripsiAbout">Tim kami menemukan ide aplikasi PadiCare setelah menyadari tantangan yang dihadapi petani padi dalam mendeteksi penyakit yang mengancam tanaman mereka. Kami menyadari adanya kebutuhan mendesak akan solusi yang dapat menyederhanakan proses deteksi penyakit dan membantu petani melindungi tanaman padi mereka secara efektif. Kami fokus pada desain yang mudah digunakan dan bertujuan untuk menjembatani kesenjangan antara teknologi dan petani dengan keterampilan teknis yang minim, memastikan aksesibilitas yang luas dan kegunaan aplikasi. Komitmen tim kami untuk mendukung petani dan meningkatkan praktik pertanian mendorong kami untuk mengembangkan PadiCare, sebuah alat praktis yang dirancang untuk menyederhanakan deteksi penyakit dan mempromosikan praktik pertanian yang berkelanjutan.</string>
    <string name="analyze">ANALISA</string>
    <string name="gallery">GALERI</string>
    <string name="alert_invalid_email">Email Tidak Valid</string>
    <string name="passMustbe">Kata sandi tidak boleh kurang dari 8 karakter</string>
    <string name="emailValid">Isi Email Terlebih Dahulu</string>
    <string name="passwordValid">Isi Password Terlebih Dahulu</string>
    <string name="loginSuccess">Login Berhasil</string>
    <string name="next">Next</string>
    <string name="hi" translatable="false">Hi, %1$s</string>
    <string name="login_failed_title">Login Gagal</string>
    <string name="login_failed_message">Email atau Password yang anda masukkan salah</string>
    <string name="retry">Coba Lagi</string>
    <string name="error_empty_email">Isi Email Terlebih Dahulu</string>
    <string name="error_empty_password">Isi Password Terlebih Dahulu</string>
    <string name="error_invalid_email">Email harus menggunakan @</string>
    <string name="error_short_password">Password harus memiliki 8 karakter</string>
    <string name="error_empty_username">Isi Username Terlebih Dahulu</string>
    <string name="result_title">Result</string>
    <string name="post">Post</string>
    <string name="welcome">Selamat Datang</string>
    <string name="login_first">Silahkan Login Terlebih Dahulu</string>
    <string name="e_mail" translatable="false">E-mail</string>
    <string name="password" translatable="false">Password</string>
    <string name="sigup_first">Silahkan Daftar Terlebih Dahulu</string>
    <string name="username" translatable="false">Username</string>
    <string name="hasil">Hasil :</string>
    <string name="hasil_prediksi">Hasil Prediksi</string>
    <string name="saran">Saran :</string>
    <string name="machine_learning" translatable="false">Machine Learning</string>
    <string name="cloud_computing" translatable="false">Cloud Computing</string>
    <string name="mobile_development" translatable="false">Mobile Development</string>
    <string name="button_add_feed">Menambahkan Postingan</string>
    <string name="img_btn_scan">Tombol Gambar Untuk Memindai</string>
    <string name="btn_img_to_scan">Scan Padi Disini</string>
    <string name="yes">Iya</string>
    <string name="no">Tidak</string>
    <string name="logout_title">Keluar</string>
    <string name="logout_message">Apakah Anda Yakin Ingin Keluar ?</string>
    <string name="select_image">Silahkan Ambil Gambar atau Pilih Gambar Terlebih Dahulu</string>
    <string name="description">Tuliskan yang anda pikirkan</string>
    <string name="title">Tuliskan judul postingan</string>
    <string name="kirim">Kirim</string>
    <string name="send">Kirim</string>
    <string name="image">Gambar</string>
    <string name="about_app">Tentang Aplikasi</string>
    <string name="comment_empty">Komentar tidak boleh kosong</string>
    <string name="comment_posted">Komentar berhasil ditambahkan</string>
    <string name="comment_failed">Gagal mengirim komentar</string>
    <string name="post_created_successfully">Postingan berhasil dibuat</string>
    <string name="post_creation_failed">Gagal membuat postingan</string>
    <string name="fill_all_fields_message">Harap isi semua kolom</string>
    <string name="register_success_title">Selamat</string>
    <string name="register_success_message">Akun dengan %1$s sudah jadi nih, silahkan Login</string>
    <string name="register_success_button">Selanjutnya</string>
    <string name="title_error">Maaf</string>
    <string name="try_again">Coba Lagi</string>
    <string name="comments">Komentar</string>
    <string name="add_a_comment">Tambahkan komentar</string>
</resources>