<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <ImageView
        android:id="@+id/iv_result"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginBottom="16dp"
        android:scaleType="centerCrop"
        android:background="@drawable/allrounded"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        android:background="@drawable/allrounded_green"
        android:layout_marginBottom="8dp">

        <TextView
            android:id="@+id/tv_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hasil"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/tv_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hasil_prediksi"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:layout_marginTop="10dp"/>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            android:background="@drawable/allrounded_green"
            android:layout_marginBottom="8dp">

            <TextView
                android:id="@+id/tv_label2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/saran"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/tv_suggest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/saran"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:padding="1dp"
                android:layout_marginTop="10dp"/>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
