<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".ui.contact.ContactUsFragment">

    <LinearLayout
        android:id="@+id/machinelearning"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="16dp"
        android:background="@color/hijau3"
        android:orientation="vertical"
        android:padding="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            style="@style/TextAppearance.Material3.TitleMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/machine_learning"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            style="@style/TextAppearance.Material3.TitleMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Nama\t : Muhammad Efendi \nID \t\t\t : M443D4KY2119"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:layout_marginTop="10dp"/>

        <TextView
            style="@style/TextAppearance.Material3.TitleMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Nama\t : Mohammad Hasan Tajuk Rizal \nID \t\t\t : M296D4KY2429"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:layout_marginTop="10dp"/>

        <TextView
            style="@style/TextAppearance.Material3.TitleMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Nama\t : Yudha Perwira Bima Sakti \nID \t\t\t : M296D4KY2299"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:layout_marginTop="10dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/cloudcomputing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@color/hijau3"
        android:orientation="vertical"
        android:padding="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/machinelearning">

        <TextView
            style="@style/TextAppearance.Material3.TitleMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cloud_computing"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            style="@style/TextAppearance.Material3.TitleMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Nama\t : Rendi Saputra \nID \t\t\t : C542D4KY1264"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:layout_marginTop="10dp"/>

        <TextView
            style="@style/TextAppearance.Material3.TitleMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Nama\t : Revani Zadah Pratiwi \nID \t\t\t : C542D4KX1322"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:layout_marginTop="10dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/mobiledevelopment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@color/hijau3"
        android:orientation="vertical"
        android:padding="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cloudcomputing">

        <TextView
            style="@style/TextAppearance.Material3.TitleMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mobile_development"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            style="@style/TextAppearance.Material3.TitleMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Nama\t : Novriyan Ferdiyanto \nID \t\t\t : A107D4KY4250"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:layout_marginTop="10dp"/>

        <TextView
            style="@style/TextAppearance.Material3.TitleMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Nama\t : Roy Saputra As \nID \t\t\t : A107D4KY4249"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:layout_marginTop="10dp"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>