<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginActivity">

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="PadiCare"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.221" />

    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="Selamat Datang"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/titleTextView"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="@+id/titleTextView"
        app:layout_constraintTop_toBottomOf="@+id/titleTextView" />

    <TextView
        android:id="@+id/welcome2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Silahkan Login Terlebih Dahulu"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/welcome"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="@+id/welcome"
        app:layout_constraintTop_toBottomOf="@+id/welcome" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/usernameEditTextLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="32dp"
        android:hint="E-mail"
        android:transitionName="username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome2"
        app:startIconDrawable="@drawable/ic_baseline_email_24">

        <com.capstone.padicare.customView.EmailEditText
            android:id="@+id/ed_login_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:paddingStart="48dp"
            android:textColor="@color/black" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordEditTextLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:hint="Password"
        android:transitionName="password2"
        android:layout_marginTop="32dp"
        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameEditTextLayout"
        app:startIconDrawable="@drawable/ic_baseline_lock_24">

        <com.capstone.padicare.customView.PasswordEditText
            android:id="@+id/ed_login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:padding="12dp"
            android:paddingStart="48dp"
            android:textColor="@color/black"
            tools:ignore="SpeakableTextPresentCheck" /> <!-- Menambahkan padding untuk teks input -->
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/SignInButton"
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:transitionName="signin"
        android:backgroundTint="@color/hijau1"
        android:text="@string/signin"
        android:textColor="@color/white"
        app:cornerRadius="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordEditTextLayout" />

    <TextView
        android:id="@+id/tv_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/no_account"
        android:textColor="@color/black"
        android:transitionName="account1"
        app:layout_constraintEnd_toEndOf="@+id/SignInButton"
        app:layout_constraintHorizontal_bias="0.338"
        app:layout_constraintStart_toStartOf="@+id/SignInButton"
        app:layout_constraintTop_toBottomOf="@+id/SignInButton" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="-16dp"
        android:background="@android:color/transparent"
        android:text="@string/register_here"
        android:textColor="@color/link_color"
        android:textSize="14sp"
        android:transitionName="account2"
        app:layout_constraintBottom_toBottomOf="@+id/tv_register"
        app:layout_constraintStart_toEndOf="@+id/tv_register"
        app:layout_constraintTop_toTopOf="@+id/tv_register"
        app:layout_constraintVertical_bias="0.243" />
    <!--
    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible"/>
        -->

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/progressBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:indicatorColor="@color/hijau3" />



</androidx.constraintlayout.widget.ConstraintLayout>